@@ -78,7 +78,7 @@
      STRING = 260,
      IDENT = 261,
      VARIABLE = 262,
-     ECHO = 263,
+     T_ECHO = 263,
      EXIT = 264,
      IF = 265,
      DO = 266,
@@ -169,7 +169,7 @@
 #define STRING 260
 #define IDENT 261
 #define VARIABLE 262
-#define ECHO 263
+#define T_ECHO 263
 #define EXIT 264
 #define IF 265
 #define DO 266
@@ -761,7 +761,7 @@ static const yytype_uint16 yyrline[] =
 static const char *const yytname[] =
 {
   "$end", "error", "$undefined", "FNUMBER", "DNUMBER", "STRING", "IDENT",
-  "VARIABLE", "ECHO", "EXIT", "IF", "DO", "WHILE", "ENDWHILE", "FOR",
+  "VARIABLE", "T_ECHO", "EXIT", "IF", "DO", "WHILE", "ENDWHILE", "FOR",
   "ENDFOR", "FOREACH", "ENDFOREACH", "DECLARE", "ENDDECLARE", "AS",
   "CONST", "GLOBAL", "UNSET", "ISSET", "EMPTY", "SWITCH", "ENDSWITCH",
   "CASE", "DEFAULT", "BREAK", "CONTINUE", "FUNCTION", "RETURN", "CLASS",
